# auv2017

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt~  Doxyfile  FAST.cpp  Filters.cpp  Filters.hpp  Forward_8action.html  Forward_8action_source.html  MS5837_8cpp.html  MS5837_8cpp__incl.map  MS5837_8cpp__incl.md5  MS5837_8cpp_source.html  README.md  Sideward_8action.html  Sideward_8action_source.html  Turn_8action.html  Turn_8action_source.html  Upward_8action.html  Upward_8action_source.html  align_8action.html  align_8action_source.html  annotated.html  arduino__node_8cpp.html  arduino__node_8cpp__incl.map  arduino__node_8cpp__incl.md5  arduino__node_8cpp_a053a65ff094e13b13bcc3aa60698abdb_cgraph.map  arduino__node_8cpp_a053a65ff094e13b13bcc3aa60698abdb_cgraph.md5  arduino__node_8cpp_a053a65ff094e13b13bcc3aa60698abdb_icgraph.map  arduino__node_8cpp_a053a65ff094e13b13bcc3aa60698abdb_icgraph.md5  arduino__node_8cpp_a0911ab71d49fb01b45b4de7eaee40d52_cgraph.map  arduino__node_8cpp_a0911ab71d49fb01b45b4de7eaee40d52_cgraph.md5  arduino__node_8cpp_a0911ab71d49fb01b45b4de7eaee40d52_icgraph.map  arduino__node_8cpp_a0911ab71d49fb01b45b4de7eaee40d52_icgraph.md5  arduino__node_8cpp_a0abe2440f2a1887a27774f926d96e68e_cgraph.map  arduino__node_8cpp_a0abe2440f2a1887a27774f926d96e68e_cgraph.md5  arduino__node_8cpp_a0abe2440f2a1887a27774f926d96e68e_icgraph.map  arduino__node_8cpp_a0abe2440f2a1887a27774f926d96e68e_icgraph.md5  arduino__node_8cpp_a10aaaae15d18ca4fe29b848f463fc8b0_cgraph.map  (+1350 more)
IMU data/: imudata.txt
debug_layer/varun_description/: CMakeLists.txt  model.config  model.sdf  package.xml
debug_layer/varun_description/launch/: varun.rviz  varun_rviz.launch
debug_layer/varun_description/meshes/: varun.dae  varun.stl
debug_layer/varun_description/urdf/: varun.urdf
debug_layer/varun_gazebo/: CMakeLists.txt  package.xml
debug_layer/varun_gazebo/launch/: debug_nodes.launch  varun_world.launch
debug_layer/varun_gazebo/models/buoy_green/: model.config
debug_layer/varun_gazebo/models/buoy_green/meshes/: buoy_green.dae
debug_layer/varun_gazebo/models/buoy_green/urdf/: buoy_green.urdf
debug_layer/varun_gazebo/models/buoy_red/: model.config
debug_layer/varun_gazebo/models/buoy_red/meshes/: buoy_red.dae
debug_layer/varun_gazebo/models/buoy_yellow/: model.config
debug_layer/varun_gazebo/models/buoy_yellow/meshes/: buoy_yellow.dae
debug_layer/varun_gazebo/models/buoy_yellow/urdf/: buoy_yellow.urdf
debug_layer/varun_gazebo/models/gate/: model.config
debug_layer/varun_gazebo/models/gate/meshes/: gate.dae
debug_layer/varun_gazebo/models/gate/urdf/: gate.urdf
debug_layer/varun_gazebo/models/light/light_negative_x/: model.config  model.sdf
debug_layer/varun_gazebo/models/light/light_negative_y/: model.config  model.sdf
debug_layer/varun_gazebo/models/light/light_negative_z/: model.config  model.sdf
debug_layer/varun_gazebo/models/light/light_x/: model.config  model.sdf
debug_layer/varun_gazebo/models/light/light_y/: model.config  model.sdf
debug_layer/varun_gazebo/models/light/light_z/: model.config  model.sdf
debug_layer/varun_gazebo/models/line/: model.config
debug_layer/varun_gazebo/models/line/meshes/: line.dae
debug_layer/varun_gazebo/models/marker_target_o/: model.config
debug_layer/varun_gazebo/models/marker_target_x/: model.config
debug_layer/varun_gazebo/models/mittal/: model.config
debug_layer/varun_gazebo/models/octagon/: model.config
debug_layer/varun_gazebo/models/octagon_signal/: model.config
debug_layer/varun_gazebo/models/perimeter/: model.config
debug_layer/varun_gazebo/models/torpedo_target/: model.config
debug_layer/varun_gazebo/scripts/: gazebo_controller.py  mock_imu_eular.py  mock_pressure_sensor.py
debug_layer/varun_gazebo/src/: varun_motion_plugin.cpp
debug_layer/varun_gazebo/worlds/: varun.world
hardware_camera/: CMakeLists.txt
hardware_camera/include/hardware_camera/: resized_subscriber.h
hardware_camera/src/: image_listener.cpp
hardware_layer/hardware_camera/: CMakeLists.txt  package.xml  resized_plugins.xml
hardware_layer/hardware_camera/cfg/: camera.cfg
hardware_layer/hardware_camera/include/hardware_camera/: resized_publisher.h  resized_subscriber.h
hardware_layer/hardware_camera/launch/: camera_config.launch  hardware_camera.launch
hardware_layer/hardware_camera/src/: image_listener.cpp  vid_pub.cpp
(+482 files in other folders)
