<?xml version="1.0"?>
<package>
  <name>varun_gazebo</name>
  <version>0.1.0</version>
  <description>varun_gazebo</description>
  <maintainer email="root@shikherverma.com">Shikher Verma</maintainer>
  <license>BSD</license>
  <url type="website">http://auv-iitk.github.io</url>
  <url type="bugtracker">https://github.com/auv-iitk/auv/issues</url>
  <url type="repository">https://github.com/auv-iitk/auv</url>
  <author email="root@shikherverma.com">Shikher Verma</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>message_runtime</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>varun_description</run_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}" plugin_path="${prefix}/lib"/>
  </export>
</package>
