<package>
  <name>hardware_camera</name>
  <version>0.0.0</version>
  <description>image transport</description>
  <author>Shikher Verma</author>
  <maintainer email="root@shikherverma.com">Shikher Verma</maintainer>
  <license>BSD</license>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>
 
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <image_transport plugin="${prefix}/resized_plugins.xml"/>
  </export>
</package>
